--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,17 @@
       <version>5.3.19</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>5.6.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>5.6.2</version>
+    </dependency>
 
 
 
