--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
       <version>2.13.2.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+      <version>2.17.2</version>
+    </dependency>
+
 
 
   </dependencies>
